Experimental changes; refactoring to use simple Hydra-generated DTO classes